--- a/.github/workflows/publish_unit_test.yml
+++ b/.github/workflows/publish_unit_test.yml
@@ -17,16 +17,8 @@ jobs:
     
     permissions:
       checks: write
-
       # needed unless run with comment_mode: off
       pull-requests: write
-
-      # only needed for private repository
-      contents: read
-
-      # only needed for private repository
-      issues: read
-
       # required by download step to access artifacts API
       actions: read
     
@@ -39,8 +31,10 @@ jobs:
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
+        if: ${{ always() }}
         with:
-          commit: ${{ github.event.workflow_run.head_sha }}
-          event_file: artifacts/Event File/event.json
-          event_name: ${{ github.event.workflow_run.event }}
-          files: "artifacts/**/*.xml"
+          files: "**/test-results/**/*.xml"
+#          commit: ${{ github.event.workflow_run.head_sha }}
+#          event_file: artifacts/Event File/event.json
+#          event_name: ${{ github.event.workflow_run.event }}
+#          files: "artifacts/**/*.xml"
