--- a/.github/workflows/publish_unit_test.yml
+++ b/.github/workflows/publish_unit_test.yml
@@ -33,8 +33,7 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: ${{ always() }}
         with:
-          files: "**/test-results/**/*.xml"
-#          commit: ${{ github.event.workflow_run.head_sha }}
-#          event_file: artifacts/Event File/event.json
-#          event_name: ${{ github.event.workflow_run.event }}
-#          files: "artifacts/**/*.xml"
+          commit: ${{ github.event.workflow_run.head_sha }}
+          event_file: artifacts/Event File/event.json
+          event_name: ${{ github.event.workflow_run.event }}
+          files: "artifacts/**/*.xml"
