[config/#45] ai agent 사용을 위한 gitigonre 수정

--- a/.gitignore
+++ b/.gitignore
@@ -164,4 +164,7 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
+### Firebender ###
+firebender.json
+
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio
