Mac DS_Store 파일 gitignore추가

--- a/.gitignore
+++ b/.gitignore
@@ -167,4 +167,7 @@ fabric.properties
 ### Firebender ###
 firebender.json
 
+### MAC ###
+*.DS_Store
+
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio
