--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -60,6 +60,9 @@ compose-stable-marker = "1.0.4"
 coil = "3.0.0"
 jetbrainsKotlinJvm = "1.9.24"
 
+# https://github.com/patrykandpatrick/vico/releases
+vico = "2.1.3"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -123,6 +126,9 @@ compose-stable-marker = { group = "com.github.skydoves", name = "compose-stable-
 # coil
 coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
 coil-core = { group = "io.coil-kt.coil3", name = "coil-core", version.ref = "coil" }
+
+# chart
+vico-compose = { group = "com.patrykandpatrick.vico", name = "compose", version.ref = "vico" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
