[ui/#59] statusbar, navigationbar 영역 수정
- Android 15 enableEdgeToEdge 관련 대응
- 각 컴포넌트 및 화면 padding값 조절
- 오늘의 공부 결과 화면 이동안하는 문제 수정

--- a/feature/main/src/main/AndroidManifest.xml
+++ b/feature/main/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize"
+            android:theme="@style/Theme.Qriz.TransparentSystemBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
