--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -70,7 +70,7 @@ vico = "2.1.3"
 kakaoSdk = "2.22.0"
 
 # https://developers.kakao.com/docs/latest/ko/android/download\
-googleAuth = "21.3.0"
+googleAuth = "21.4.0"
 
 # https://developer.android.com/identity/sign-in/credential-manager
 credentials = "1.6.0-beta03"
@@ -149,7 +149,7 @@ vico-compose = { group = "com.patrykandpatrick.vico", name = "compose", version.
 kakao-sdk-user = { group = "com.kakao.sdk", name = "v2-user", version.ref = "kakaoSdk" }
 
 #google-login
-google-auth = { group = "com.google.firebase", name = "firebase-bom", version.ref = "googleAuth" }
+google-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "googleAuth" }
 
 # credentials
 androidx-credentials = { group = "androidx.credentials", name = "credentials", version.ref = "credentials" }
