[chore] gitignore에 빌드 출력 디렉토리 추가

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 .gradle/
 build/
 
+# Build output directories
+app/debug/
+app/release/
+
 # Local configuration file (sdk path, etc)
 local.properties
 
